cmake_minimum_required(VERSION 3.5)
project(orbslam3)

# REMOVE THIS LINE - it's unnecessary and can cause problems
set(ENV{PYTHONPATH} "/opt/ros/humble/lib/python3.10/site-packages/")

# Also remove this line if you have it - CMakeModules is not needed for ORB_SLAM3
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules)

# Set C++ standard before any targets
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# Find ROS 2 packages
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(cv_bridge REQUIRED)
find_package(message_filters REQUIRED)

# Find other dependencies
find_package(Pangolin REQUIRED)
find_package(Eigen3 REQUIRED)
find_package(OpenCV REQUIRED COMPONENTS
    core
    imgproc
    calib3d
    features2d
    videoio
    highgui
    imgcodecs
)

# Set ORB_SLAM3 paths manually
set(ORB_SLAM3_ROOT_DIR $ENV{HOME}/ORB_SLAM3)

# Check if ORB_SLAM3 exists and is built
if(NOT EXISTS ${ORB_SLAM3_ROOT_DIR})
    message(FATAL_ERROR "ORB_SLAM3 not found at ${ORB_SLAM3_ROOT_DIR}. Please clone ORB_SLAM3 first.")
endif()

if(NOT EXISTS ${ORB_SLAM3_ROOT_DIR}/lib/libORB_SLAM3.so)
    message(FATAL_ERROR "ORB_SLAM3 not built. Please build ORB_SLAM3 first by running ./build.sh in ${ORB_SLAM3_ROOT_DIR}")
endif()

# Include directories for ORB_SLAM3 and its dependencies
include_directories(
    include
    ${ORB_SLAM3_ROOT_DIR}/include
    ${ORB_SLAM3_ROOT_DIR}/include/CameraModels
    ${ORB_SLAM3_ROOT_DIR}
    ${ORB_SLAM3_ROOT_DIR}/Thirdparty/DBoW2
    ${ORB_SLAM3_ROOT_DIR}/Thirdparty/g2o
    ${ORB_SLAM3_ROOT_DIR}/Thirdparty/Sophus
    ${OpenCV_INCLUDE_DIRS}
    ${Pangolin_INCLUDE_DIRS}
    ${Eigen3_INCLUDE_DIRS}
)

# Link directories for ORB_SLAM3 and its dependencies
link_directories(
    ${ORB_SLAM3_ROOT_DIR}/lib
    ${ORB_SLAM3_ROOT_DIR}/Thirdparty/DBoW2/lib
    ${ORB_SLAM3_ROOT_DIR}/Thirdparty/g2o/lib
)

# Mono executable
add_executable(mono
    src/monocular/mono.cpp
    src/monocular/monocular-slam-node.cpp
)
ament_target_dependencies(mono rclcpp sensor_msgs cv_bridge Pangolin)
target_link_libraries(mono ${OpenCV_LIBS} ORB_SLAM3)

# RGBD executable
add_executable(rgbd
    src/rgbd/rgbd.cpp
    src/rgbd/rgbd-slam-node.cpp
)
ament_target_dependencies(rgbd rclcpp sensor_msgs cv_bridge message_filters Pangolin)
target_link_libraries(rgbd ${OpenCV_LIBS} ORB_SLAM3)

# Stereo executable
add_executable(stereo
    src/stereo/stereo.cpp
    src/stereo/stereo-slam-node.cpp
)
ament_target_dependencies(stereo rclcpp sensor_msgs cv_bridge message_filters Pangolin)
target_link_libraries(stereo ${OpenCV_LIBS} ORB_SLAM3)

# Stereo-inertial executable
add_executable(stereo-inertial
    src/stereo-inertial/stereo-inertial.cpp
    src/stereo-inertial/stereo-inertial-node.cpp
)
ament_target_dependencies(stereo-inertial rclcpp sensor_msgs cv_bridge Pangolin)
target_link_libraries(stereo-inertial ${OpenCV_LIBS} ORB_SLAM3)

# Install targets
install(TARGETS mono rgbd stereo stereo-inertial
    DESTINATION lib/${PROJECT_NAME}
)

# This must be the last command
ament_package()
